--- a/static/voicewake/css/output.css
+++ b/static/voicewake/css/output.css
@@ -784,20 +784,12 @@ video {
   margin-bottom: auto;
 }
 
-.mb-0 {
-  margin-bottom: 0px;
-}
-
 .mb-1 {
   margin-bottom: 0.25rem;
 }
 
 .mb-4 {
   margin-bottom: 1rem;
-}
-
-.mt-0 {
-  margin-top: 0px;
 }
 
 .mt-2 {
@@ -1150,16 +1142,6 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.-translate-y-4 {
-  --tw-translate-y: -1rem;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.translate-y-4 {
-  --tw-translate-y: 1rem;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
 .-rotate-45 {
   --tw-rotate: -45deg;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -1271,10 +1253,6 @@ video {
   grid-template-rows: repeat(2, minmax(0, 1fr));
 }
 
-.grid-rows-3 {
-  grid-template-rows: repeat(3, minmax(0, 1fr));
-}
-
 .flex-row {
   flex-direction: row;
 }
@@ -1301,10 +1279,6 @@ video {
 
 .justify-between {
   justify-content: space-between;
-}
-
-.justify-items-center {
-  justify-items: center;
 }
 
 .gap-1 {
@@ -1670,11 +1644,6 @@ video {
   padding-bottom: 2rem;
 }
 
-.px-5 {
-  padding-left: 1.25rem;
-  padding-right: 1.25rem;
-}
-
 .pb-0 {
   padding-bottom: 0px;
 }
@@ -1685,10 +1654,6 @@ video {
 
 .pb-1 {
   padding-bottom: 0.25rem;
-}
-
-.pb-1\.5 {
-  padding-bottom: 0.375rem;
 }
 
 .pb-10 {
@@ -1733,6 +1698,14 @@ video {
 
 .pb-9 {
   padding-bottom: 2.25rem;
+}
+
+.pb-\[0\.1875rem\] {
+  padding-bottom: 0.1875rem;
+}
+
+.pb-\[0\.3125rem\] {
+  padding-bottom: 0.3125rem;
 }
 
 .pl-1 {
@@ -1819,18 +1792,6 @@ video {
   padding-top: 1px;
 }
 
-.pb-\[5px\] {
-  padding-bottom: 5px;
-}
-
-.pb-\[0\.3125rem\] {
-  padding-bottom: 0.3125rem;
-}
-
-.pb-\[0\.1875rem\] {
-  padding-bottom: 0.1875rem;
-}
-
 .text-left {
   text-align: left;
 }
@@ -1914,14 +1875,6 @@ video {
 
 .italic {
   font-style: italic;
-}
-
-.leading-none {
-  line-height: 1;
-}
-
-.leading-\[0\] {
-  line-height: 0;
 }
 
 .text-green-700 {
@@ -2067,20 +2020,12 @@ video {
   transition-duration: 150ms;
 }
 
-.duration-200 {
-  transition-duration: 200ms;
-}
-
 .duration-300 {
   transition-duration: 300ms;
 }
 
 .duration-500 {
   transition-duration: 500ms;
-}
-
-.duration-1000 {
-  transition-duration: 1000ms;
 }
 
 .ease-in {
@@ -2327,7 +2272,8 @@ textarea {
 */
 
 .has-emoji{
-  font-family: "Segoe UI Emoji", "Segoe UI Symbol", "Segoe UI", "Apple Color Emoji", "Twemoji Mozilla",
+  /*removed "Segoe UI Emoji", "Segoe UI Symbol", "Segoe UI", because they force their emojis downwards*/
+  font-family: "Apple Color Emoji", "Twemoji Mozilla",
     "Noto Color Emoji", "EmojiOne Color", "Android Emoji"
 }
 
